tests/typechecker/should_fail/dot_datatype_split.csp
datatype T = A.Bool | B.Bool

f :: (T) -> Bool
f(_.b) = b
f(_) = error("")

